[package]
name = "tinydb"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sqlparser = "0.17.0"
rustyline = "9.1.2"
anyhow = "1.0.57"
thiserror = "1.0.31"

[dev-dependencies]
tempfile = "3.2"
rand = "0.8.5"
