[package]
name = "tinydb"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
stderrlog = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sqlparser = "0.17.0"
anyhow = "1.0.57"
thiserror = "1.0.31"
structopt = "0.3.26"
tokio = { version = "1.21", features = ["full"] }
bytes = "1.2.1"
byteorder = "1.4.3"
async-recursion = "1.0.0"

[dev-dependencies]
tempfile = "3.2"
rand = "0.8.5"
